--- a/alivio/index.html
+++ b/alivio/index.html
@@ -25,7 +25,14 @@
     body{ font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; color:var(--ink); }
   </style>
 
-<!-- D-C-C -->
+
+  <meta property="og:title" content="Ameixa APP" />
+<meta property="og:description" content="Descubra o poder da Ameixa para cuidar do seu intestino de forma leve e natural." />
+<meta property="og:url" content="https://ameixasolta.site/alivio" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://ameixasolta.site/alivio/ameixa sem fundo.jpg" />
+
+
 <script>!function(i,n){i._plt=i._plt||(n&&n.timeOrigin?n.timeOrigin+n.now():Date.now())}(window,performance);</script>
 <link rel="preload" href="https://scripts.converteai.net/1ab595af-d4ac-496f-8fc7-9e3820273242/players/69011478943f95bed1b2dcda/v4/player.js" as="script">
 <link rel="preload" href="https://scripts.converteai.net/lib/js/smartplayer-wc/v4/smartplayer.js" as="script">
@@ -91,7 +98,7 @@ src="https://www.facebook.com/tr?id=2757608141297995&ev=PageView&noscript=1"
 
     
 
-    <!-- Vsl D-C-C -->
+    
     <section class="mt-6">
       <div class="aspect-video w-full bg-[#470244] border border-gray-300 rounded-lg grid place-items-center">
         <vturb-smartplayer id="vid-69011478943f95bed1b2dcda" style="display: block; margin: 0 auto; width: 100%; max-width: 400px;"></vturb-smartplayer> <script type="text/javascript"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/1ab595af-d4ac-496f-8fc7-9e3820273242/players/69011478943f95bed1b2dcda/v4/player.js", s.async=!0,document.head.appendChild(s); </script>
@@ -403,6 +410,7 @@ src="https://www.facebook.com/tr?id=2757608141297995&ev=PageView&noscript=1"
 
 </body>
 </html>
+
 
 
 
