--- a/alivio/index.html
+++ b/alivio/index.html
@@ -30,7 +30,7 @@
 <meta property="og:description" content="Descubra o poder da Ameixa para cuidar do seu intestino de forma leve e natural." />
 <meta property="og:url" content="https://ameixasolta.site/alivio" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="https://ameixasolta.site/alivio/ameixa sem fundo.jpg" />
+<meta property="og:image" content="https://ameixasolta.site/alivio/BANNER.PNG" />
 
 
 <script>!function(i,n){i._plt=i._plt||(n&&n.timeOrigin?n.timeOrigin+n.now():Date.now())}(window,performance);</script>
@@ -410,6 +410,7 @@ src="https://www.facebook.com/tr?id=2757608141297995&ev=PageView&noscript=1"
 
 </body>
 </html>
+
 
 
 
