--- a/test1/index.html
+++ b/test1/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>AMEIXAPP</title>
+<link rel="preconnect" href="https://www.youtube.com">
+<link rel="dns-prefetch" href="https://www.youtube.com">
+<link rel="preconnect" href="https://i.ytimg.com"> <link rel="dns-prefetch" href="https://i.ytimg.com">
 
 
 <link rel="icon" type="image/svg+xml" href="images/ameixa.png">       
@@ -653,5 +656,6 @@ currency: 'BRL'
 
 </body>
 </html>
+
 
 
