--- a/test1/index.html
+++ b/test1/index.html
@@ -256,7 +256,16 @@ currency: 'BRL'
     </div>
 
     <script src="https://www.youtube.com/iframe_api"></script>
-    
+
+
+  <div class="w-full p-10 bg-gray-200">
+
+  <button class="
+    w-full                  bg-green-600            hover:bg-green-700      text-white              font-bold               text-lg                 py-4                    px-6                    rounded-lg              text-center             leading-tight           shadow-md               ">
+   Desconto aplicado! Garanta sua compra no Ameixa App
+  </button>
+
+</div>
     
     <!-- Mensagem abaixo do vídeo -->
 <div id="aviso-som" class="text-center mt-3 flex items-center justify-center gap-2 text-gray-700 text-sm animate-pulse">
@@ -656,6 +665,7 @@ currency: 'BRL'
 
 </body>
 </html>
+
 
 
 
